--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>GET START!</h1>
     <h1>OK.....</h1>
+    <div class="radial-gradient"> radial-gradient</div>
+    <div class="conic-gradient"> conic-gradient</div>
 </body>
 </html>
