add transition and transform

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <body>
     <h1>GET START!</h1>
     <h1>OK.....</h1>
+    <div id="float">
     <div class="radial-gradient"> radial-gradient</div>
     <div class="conic-gradient"> conic-gradient</div>
+    <div class="transition">
+        <div class="text">Kaya hua!</div>
+    </div>
+    </div>
 </body>
 </html>
